--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ec5d4c6292599035b6ca",
+    "/css/app.css": "/css/app.css?id=8a77fee216d00f54edaf"
 }
